--- a/bower.json
+++ b/bower.json
@@ -4,5 +4,9 @@
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.1.0",
     "platform.js": "platform#~1.3.0"
+  },
+  "dependencies": {
+    "ionic-datepicker": "~0.9.0",
+    "ionic-timepicker": "~0.4.0"
   }
 }
